eksPoc/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ceu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: ceu
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 075458558257.dkr.ecr.ca-central-1.amazonaws.com/nginx:2.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: efs-storage
          mountPath: /contents
      volumes:
      - name: efs-storage
        persistentVolumeClaim:
          claimName: efs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: ceu
  labels:
    app: my-app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: my-app
  type: ClusterIP
