eksPoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: my-app-service
      port:
        number: 80
  rules:
  - host: my-app.internal.example.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
